--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Estilo.css">
+    <link rel="stylesheet" href="estilo.css">
     <title>KacovisK</title>
 </head>
 <body>
     <hr>
-    <h1>Kcovisk Blog</h1>
+    <h1>Kacovisk Blog</h1>
     <hr>
 </body>
 </html>
