--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <hr>
     <h1>Kacovisk Blog</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis tempora suscipit odio repellendus impedit nam quaerat porro, corporis mollitia, nemo quas illo hic itaque omnis officiis, aspernatur animi ipsum commodi!</p>
     <hr>
 </body>
 </html>
